changing name files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link href="../style.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
 
     <title>Document</title>
 </head>
@@ -101,7 +101,7 @@
        
         </footer>
 
-        <script src="../index.js"></script>
+        <script src="../js/index.js"></script>
 
     </div>
 
