--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="modal-background"></div>
             <div class="modal-content">
               <p class="image is-4by3">
-                <img src="../images/fond-star-wars-modale.png" alt="">
+                <img src="images/fond-star-wars-modale.png" alt="">
               </p>
               <p class="score"></p>
               <p class="content"></p>
@@ -60,7 +60,7 @@
             <div class="modal-background"></div>
             <div class="modal-content">
               <p class="image is-4by3">
-                <img src="../images/robot.png" alt="">
+                <img src="images/robot.png" alt="">
               </p>
               <p class="content"></p>
               
@@ -72,15 +72,15 @@
 
             <div class="buttons">
 
-                <div class="monde1"> <img src="../images/Dagobah.jpg" alt="monde1">
+                <div class="monde1"> <img src="images/Dagobah.jpg" alt="monde1">
                 <button id="button1"  class="yoda"></button>
                 </div>
 
-                <div class="monde2"> <img src="../images/etoileMort.jpg" alt="monde2">
+                <div class="monde2"> <img src="images/etoileMort.jpg" alt="monde2">
                 <button id="button2" class="stormtrooper"></button>
                 </div>
 
-                <div class="monde3"> <img src="../images/Kashyyyk.jpg" alt="monde3">
+                <div class="monde3"> <img src="images/Kashyyyk.jpg" alt="monde3">
                 <button id="button3" class="schewbacca"></button>
                 </div>
 
